# 3D_Segments_Based_Algorithm

./: CMakeLists.txt  README.md
data/: img_lines.txt
include/: Energy.hpp  Transformation.hpp  clustering.hpp  match_data.hpp
src/: 3Dseg_Registration.cpp  Test_3DS.cpp
